--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-objs
-*/._*
-Makefile
-openssl-1.1.1l
+nginx/objs
+nginx/Makefile
+node/dist
+node_modules
+nginx.pid
+logs
+nginx/dep/openssl-1.1.1l
+nginx/xcode
+nginx/conf/nginx.conf
+nginx/conf/nginx-server-plain.conf
+nginx/conf/nginx-server.conf
+nginx/conf/nginx.conf.backup
